tests/invalid/enum/match_payload_binder_arity_mismatch.facet
enum Maybe {
  Some(unrestricted isize),
  None
}

fn value(m: unrestricted Maybe) -> unrestricted isize {
  match m {
    Some(x, y) => x,
    None => 0,
  }
}
